--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Short stories'
 - !lcsh 'Fantasy fiction'
 - !lcc 'PS'
+- GITenberg
 title: G-r-r-r...!
 url: http://www.gutenberg.org/ebooks/29194
